chore: removed unecessary methods as we are running with JDK 11